WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247382
REGRESSION (
255095@main
): [iOS] 'caret-color: auto' displays a black caret color
https://bugs.webkit.org/show_bug.cgi?id=247382
Summary
REGRESSION (255095@main): [iOS] 'caret-color: auto' displays a black caret color
Aditya Keerthi
Reported
2022-11-02 15:16:26 PDT
rdar://101579150
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-11-02 17:02:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/6063
EWS
Comment 2
2022-11-03 11:20:40 PDT
Committed
256281@main
(80d228d483a6): <
https://commits.webkit.org/256281@main
> Reviewed commits have been landed. Closing PR #6063 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug